# jcc-api-capture

./: .gitignore  README.md  api_capture.py  github_push.py  main.py  push_project.py  requirements.txt  run.py  setup.bat  themes.json  update.bat  update.py  utilities.py
.github/workflows/: auto-update.yml  python-app.yml
QtThemeHub/: LICENSE  README.md  __init__.py  pyproject.toml
QtThemeHub/core/: __init__.py  loader.py  manager.py
QtThemeHub/examples/: basic_app.py
QtThemeHub/themes/: __init__.py
QtThemeHub/themes/custom/: blue_ocean.qss
QtThemeHub/ui/: __init__.py
QtThemeHub/ui/widgets/: previewer.py  selector.py
QtThemeHub/utils/: __init__.py  compat.py  styler.py  validator.py
auto_launcher/: PowerShell_profile.ps1  README.md  TERMINAL_TROUBLESHOOTING.md  VSCODE_SETUP.md  chrome_setup_launcher.py  config.json  default_config.py  requirements.txt  start_dev.ps1  timed_multi_launcher.py  timer_launcher_ui.py
data/crawler/: README.md
jcc_front/: __init__.py  main.py  main_window.py
jcc_front/config/: settings.json  settings.py  ui_config.json
jcc_front/themes/: theme_manager.py
macros/: README.md  activate_dev_mode.json  game_clicks.json  game_start.json  macro_templates.json  quick_launch.json
scripts/: data_version_manager.py  tft_data_collector.py  tft_playwright_crawler.py
shared/: reboot_logcat.log.0  reboot_logcat.log.1
shared/Download/: charles.cer  charles.pem
shared/Music/.thumbnails/: .database_uuid
